# santa2023

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  a_star_cube3.py  brute_force.py  cancel-by-sign-change-rule-for-all-puzzles.ipynb  count_submission.py  duplicate_cube3_nocenter.txt  explorer_state.py  explorer_state_cube.py  explorer_state_cube2.py  explorer_state_cube3.py  explorer_state_cube3_nocenter.py  explorer_state_cube5_nocenter.py  explorer_state_globe.py  explorer_state_globe116.py  explorer_state_globe34.py  explorer_state_globe_1_8.py  explorer_state_wreath.py  globe_3-4.ipynb  globe_3-4_2.ipynb  last_move_tuning_cube3.py  last_move_tuning_globe18.py  memo.txt  optimize-any-solution-with-group-theory-approach.ipynb  puzzle.py  pyproject.toml  read_puzzle_info.py  readme.md  reformat.py  reformatb.py  rubiks3.py  rubiks3_ref.py  santa-2023-networkx-find-shortest-path.ipynb  schreier.py  score.py  solve-all-nxnxn-cubes-w-traditional-solution-state.ipynb  solve_globe.py  sort_hands.py  state_pair.py  (+6 more)
