[tool.poetry]
name = "santa2023"
version = "0.1.0"
description = ""
authors = ["maron8676 <maron8676@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
sympy = "^1.12"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
